tests/reference/asr-implicit8-03c7a90.stderr
semantic error: m, n is/are used as dimensions but not declared
 --> tests/implicit8.f90:1:1 - 6:13
  |
1 |    integer function a(n,m)
  |    ^^^^^^^^^^^^^^^^^^^^^^^...
...
  |
6 |    end function
  | ...^^^^^^^^^^^^^ 
